--- a/src/plugins/settings/settings.less
+++ b/src/plugins/settings/settings.less
@@ -2,8 +2,9 @@
   grid-area: settings;
   width: 250px;
   max-width: 250px;
+  max-height: 100%;
   overflow: hidden;
-  transition: max-width 0.3s ease-in-out;
+  transition: max-width 0.3s ease-in-out, max-height 0s;
   accent-color: @dark-text;
 
   &-inner {
